--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
+        "barryvdh/laravel-snappy": "^1.0",
         "bezhansalleh/filament-shield": "^4.0",
+        "dompdf/dompdf": "^3.1",
         "filament/filament": "4.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "mpdf/mpdf": "^8.2",
+        "phpoffice/phpword": "^1.4",
         "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
